# web-checker

./: .gitignore  pyproject.toml
checker/: parser.py  tests.py  utils.py  views.py
templates/checker/: check.html
