[tool.poetry]
name = "web-checker"
version = "1.0.0"
description = "The web application that checks a website's SEO score."
authors = ["Thinh Nguyen Phuoc <npthinh1996@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "~5.0"
lxml = "~5.2"
requests = "~2.31"


[tool.poetry.group.deploy.dependencies]
uvicorn = "~0.29"


[tool.poetry.group.dev.dependencies]
black = "~24.4"


[tool.poetry.group.test.dependencies]
coverage = "~7.5"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.coverage.run]
branch = true
omit = [
  "*/migrations/*",
  "src/*",
  "*/__init__.py",
  "*/tests.py",
  "manage.py",
]
source = ["."]

[tool.coverage.report]
skip_covered = true
skip_empty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
